fixing small layout issue

--- a/public/css/project.css
+++ b/public/css/project.css
@@ -60,6 +60,7 @@ h1 {
 .container section div a {
   text-decoration: none;
   color: #fff;
+  margin: 1em 0;
 }
 
 
@@ -76,13 +77,20 @@ h1 {
     /* border: 2px solid green; */
     width: 94%;
     max-height: 100%;
-    height: 520px;
+    /* height: 520px; */
     border-bottom: 1px solid #E0E0E0;
     margin: 1em 0;
+    padding-bottom: 20px;
   }
 
   .container section div iframe {
-    height: 70%;
+    height: 350px;
+}
 
+.container section div a {
+  text-decoration: none;
+  color: #fff;
+  margin: 2em 0;
+}
 
-}}
+}
